First version with: - Missing logos - Document section - Form section. External tools for sending email

--- a/documents.html
+++ b/documents.html
@@ -19,9 +19,9 @@
                 <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>-->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Principal</a></li>
-                        <li class="nav-item"><a class="nav-link" href="documents.html">Documentos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">Principal</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="documents.html">Documentos</a></li>
+                        <li class="nav-item"><a class="nav-link"  href="contact.html">Contacto</a></li>
                     <!-- 
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Sobre nosotros</a></li>
@@ -34,62 +34,35 @@
             </div>
         </nav>
         <!-- Page Content-->
+
         <div class="container px-4 px-lg-5">
             <!-- Heading Row-->
             <div class="row gx-4 gx-lg-5 align-items-center my-5">
-                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://i.imgur.com/8g7riOI.png" alt="..." /></div>
+
                 <div class="col-lg-5">
-                    <h1 class="font-weight-light">¿Qué es INESData?</h1>
-                    <p>Una incubadora de espacios de datos y servicos de IA a nivel nacional haciendo uso de infraestructuras federadas en la nube. 
-                    <!--
-                    <div class="col-md-4 mb-5">
-                        <div class="card h-100">
-                            <div class="card-body"><h2 class="card-title">4</h2><p>Espacio de Datos</p></div>
-                        </div>
-                    </div>    
-                    <div class="col-md-4 mb-5">
-                        <div class="card h-100">
-                            <div class="card-body"><h2 class="card-title">7</h2><p>Acuerdos Público-Privado</p></div>
-                        </div>
-                    </div>      
-                    -->          
-                    <!-- <a class="btn btn-primary" href="#!">Contáctanos!</a> -->
+                    <h1 class="font-weight-light">Documentos públicos </h1>
                 </div>
-            </div>
-            <!-- Call to Action-->
-            <div class="card text-white bg-secondary my-5 py-4 text-center">
-                <div class="card-body">
-                <p class="text-white m-0">Ayudamos a alinear la Estrategia de Datos Europea con empresas emergentes y pymes basadas en datos facilitando el desarrollo de soluciones innovadoras confiables y seguras basadas en datos industriales y personales.</p></div>
             </div>
             <!-- Content Row-->
             <div class="row gx-4 gx-lg-5">
                 <div class="col-md-4 mb-5">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h2 class="card-title">Infraestructura para tu Espacio de Datos</h2>
-                            <p class="card-text">Proporcionamos infraestructura y componentes para la creación de espacios de datos alineadas con las propuestas a nivel europeo (IDSA, Gaia-X).
+                            <h2 class="card-title">Primera aproximación del proyeto INESData</h2>
+                            <p class="card-text">Presentación inicial del proyecto por Elena Montiel y Víctor Rodríguez. Abril, 2023. </p>
                         </div>
-                        <!-- <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">Más información</a></div> -->
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://zenodo.org/record/7845805">Enlace</a></div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-5">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h2 class="card-title">Servicios de Inteligencia Artificial</h2>
-                            <p class="card-text">Convertimos los datos en conocimiento mediante la disponibilidad de servicios multimodales de IA - Procesamiento de Lenguaje, Grafos de Conocimiento y análisis multimedia.</p>
-                        </div>
-                        <!-- <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">Más información</a></div> -->
-                    </div>
-                </div>
-                <div class="col-md-4 mb-5">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h2 class="card-title">Espacio de Datos sectoriales</h2>
-                            <p class="card-text">Habilitamos una serie de Espacio de Datos sectoriales: sector lingüístico, jurídico y contratación pública, movilidad y medios de comunicación</p>
-                        </div>
-                        <!-- <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">Más información</a></div> -->
-                    </div>
-                </div>
+                  <div class="card h-100">
+                      <div class="card-body">
+                          <h2 class="card-title">E4. Version preliminar del handbook (v1)</h2>
+                          <p class="card-text">Handbook para ayudar en el despliegue de espacios de datos y de conocimientos en cualquier sector vertical, facilitando todos los aspectos relacionados con la gobernanza de datos y recursos semánticos, la gestión de roles dentro de los espacios de datos, y en general la configuración de la cooperación entre actores para la compartición de datos. 
+                      </div>
+                      <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/1uSbFhZMxlmG1ETUPKymmvhVqq3eSUj0p/view?usp=sharing">Enlace</a></div>
+                  </div>
+              </div>
             </div>
         </div>
         <!-- Footer-->
