--- a/content/es/documentos.html
+++ b/content/es/documentos.html
@@ -7,21 +7,30 @@
         <meta name="author" content="" />
         <title>INESData</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="../../assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="../../css/styles.css" rel="stylesheet" />
     </head>
     <body>
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container px-5">
-                <a class="navbar-brand" href="#!">INESData. Incubadora española de Espacio de Datos</a>
+                <a class="navbar-brand" href="#!">Proyecto INESData</a>
                 <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>-->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="index.html">Principal</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="documents.html">Documentos</a></li>
-                        <li class="nav-item"><a class="nav-link"  href="contact.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link " href="proyecto.html">Sobre el proyecto</a></li>
+                        <li class="nav-item"><a class="nav-link " href="noticias.html">Noticias</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="documentos.html">Documentos</a></li>
+                        <li class="nav-item"><a class="nav-link"  href="contacto.html">Contacto</a></li>
+                        <div class="dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">&#127760; Idioma</a>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                              <a class="dropdown-item" href="../es/documentos.html">Español</a>
+                              <a class="dropdown-item" href="../en/documents.html">Ingles</a>
+                            </div>
+                        </div>
                     <!-- 
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Sobre nosotros</a></li>
@@ -38,9 +47,8 @@
         <div class="container px-4 px-lg-5">
             <!-- Heading Row-->
             <div class="row gx-4 gx-lg-5 align-items-center my-5">
-
                 <div class="col-lg-5">
-                    <h1 class="font-weight-light">Documentos públicos </h1>
+                    <h1 class="font-weight-light">Documentos públicos</h1>
                 </div>
             </div>
             <!-- Content Row-->
@@ -68,20 +76,34 @@
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <!-- Logos -->
-            <div class="shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto">
-                    <img src="./assets/logos/nextgeneration-logo.png" height="70" alt="" loading="lazy" class="img-responsive"/>
-                    <img src="./assets/logos/ministerio-logo.png" height="70" alt="" loading="lazy" class="img-responsive"/>
-                    <img src="./assets/logos/unico-logo.png" height="140" alt="" loading="lazy" class="img-responsive" />
-                    <img src="./assets/logos/upm-logo.jpg" height="100" alt="" loading="lazy" class="img-responsive"/>
-                    <img src="./assets/logos/oeg-logo.gif" height="100" alt="" loading="lazy" class="img-responsive"/>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-6 col-md-4 col-lg-2 mb-4 text-center">
+                        <img src="../../assets/logos/nextgeneration-logo.png" alt="" loading="lazy" class="img-fluid" />
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-2 mb-4 text-center">
+                        <img src="../../assets/logos/ministerio-logo.png" alt="" loading="lazy" class="img-fluid" />
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-2 mb-4 text-center">
+                        <img src="../../assets/logos/unico-logo.png" alt="" loading="lazy" class="img-fluid" />
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-2 mb-4 text-center">
+                        <img src="../../assets/logos/upm-logo.jpg" alt="" loading="lazy" class="img-fluid" />
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-2 mb-4 text-center">
+                        <img src="../../assets/logos/oeg-logo.gif" alt="" loading="lazy" class="img-fluid" />
+                    </div>
+                </div>
             </div>
-            <!-- <div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto" style="width: 150px; height: 150px;"></div>-->
-            <div class="container px-4 px-lg-5"><p class="m-0 text-center text-white">INESData (Infraestructura para la INvestigación de ESpacios de DAtos distribuidos) &copy; 2023</p></div>
+
+            <div class="container px-4 px-lg-5 text-center">
+                <p class="m-0 text-white">INESData (Infraestructura para la INvestigación de ESpacios de DAtos distribuidos) &copy; 2023</p>
+            </div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="../../js/scripts.js"></script>
     </body>
 </html>
 
