--- a/index.html
+++ b/index.html
@@ -8,107 +8,32 @@
         <title>INESData</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body>
-        <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container px-5">
-                <a class="navbar-brand" href="#!">INESData. Incubadora española de Espacio de Datos</a>
-                <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>-->
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Principal</a></li>
-                        <li class="nav-item"><a class="nav-link" href="documents.html">Documentos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
-                    <!-- 
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Sobre nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Contacto</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Documentos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Servicios</a></li>
-                    -->
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- Page Content-->
-        <div class="container px-4 px-lg-5">
-            <!-- Heading Row-->
-            <div class="row gx-4 gx-lg-5 align-items-center my-5">
-                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://i.imgur.com/8g7riOI.png" alt="..." /></div>
-                <div class="col-lg-5">
-                    <h1 class="font-weight-light">¿Qué es INESData?</h1>
-                    <p>Una incubadora de espacios de datos y servicos de IA a nivel nacional haciendo uso de infraestructuras federadas en la nube. 
-                    <!--
-                    <div class="col-md-4 mb-5">
-                        <div class="card h-100">
-                            <div class="card-body"><h2 class="card-title">4</h2><p>Espacio de Datos</p></div>
-                        </div>
-                    </div>    
-                    <div class="col-md-4 mb-5">
-                        <div class="card h-100">
-                            <div class="card-body"><h2 class="card-title">7</h2><p>Acuerdos Público-Privado</p></div>
-                        </div>
-                    </div>      
-                    -->          
-                    <!-- <a class="btn btn-primary" href="#!">Contáctanos!</a> -->
-                </div>
-            </div>
-            <!-- Call to Action-->
-            <div class="card text-white bg-secondary my-5 py-4 text-center">
-                <div class="card-body">
-                <p class="text-white m-0">Ayudamos a alinear la Estrategia de Datos Europea con empresas emergentes y pymes basadas en datos facilitando el desarrollo de soluciones innovadoras confiables y seguras basadas en datos industriales y personales.</p></div>
-            </div>
-            <!-- Content Row-->
-            <div class="row gx-4 gx-lg-5">
-                <div class="col-md-4 mb-5">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h2 class="card-title">Infraestructura para tu Espacio de Datos</h2>
-                            <p class="card-text">Proporcionamos infraestructura y componentes para la creación de espacios de datos alineadas con las propuestas a nivel europeo (IDSA, Gaia-X).
-                        </div>
-                        <!-- <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">Más información</a></div> -->
-                    </div>
-                </div>
-                <div class="col-md-4 mb-5">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h2 class="card-title">Servicios de Inteligencia Artificial</h2>
-                            <p class="card-text">Convertimos los datos en conocimiento mediante la disponibilidad de servicios multimodales de IA - Procesamiento de Lenguaje, Grafos de Conocimiento y análisis multimedia.</p>
-                        </div>
-                        <!-- <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">Más información</a></div> -->
-                    </div>
-                </div>
-                <div class="col-md-4 mb-5">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h2 class="card-title">Espacio de Datos sectoriales</h2>
-                            <p class="card-text">Habilitamos una serie de Espacio de Datos sectoriales: sector lingüístico, jurídico y contratación pública, movilidad y medios de comunicación</p>
-                        </div>
-                        <!-- <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">Más información</a></div> -->
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <!-- Logos -->
-            <div class="shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto">
-                    <img src="./assets/logos/nextgeneration-logo.png" height="70" alt="" loading="lazy" class="img-responsive"/>
-                    <img src="./assets/logos/ministerio-logo.png" height="70" alt="" loading="lazy" class="img-responsive"/>
-                    <img src="./assets/logos/unico-logo.png" height="140" alt="" loading="lazy" class="img-responsive" />
-                    <img src="./assets/logos/upm-logo.jpg" height="100" alt="" loading="lazy" class="img-responsive"/>
-                    <img src="./assets/logos/oeg-logo.gif" height="100" alt="" loading="lazy" class="img-responsive"/>
-            </div>
-            <!-- <div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto" style="width: 150px; height: 150px;"></div>-->
-            <div class="container px-4 px-lg-5"><p class="m-0 text-center text-white">INESData (Infraestructura para la INvestigación de ESpacios de DAtos distribuidos) &copy; 2023</p></div>
-        </footer>
+        <!-- Added -->
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+
+        <!-- Language detector -->
+        <script>
+            // Function to redirect to the appropriate language page
+            function redirectToLanguage() {
+                // Check the user's browser language
+                var userLanguage = navigator.language || navigator.userLanguage;
+    
+                // Redirect based on the user's language
+                if (!userLanguage.startsWith('es')) {
+                    window.location.href = './content/es/index.html'; 
+                } else {
+                    // User's language is not Spanish, so redirect to the default page (e.g., English)
+                    window.location.href = './content/en/index.html'; 
+                }
+            }
+    
+            // Call the function when the page loads
+            window.onload = redirectToLanguage;
+        </script>
+    </head>
+    <body>
+
     </body>
 </html>
 
