--- a/content/en/index.html
+++ b/content/en/index.html
@@ -17,11 +17,11 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container px-5">
-                <a class="navbar-brand" href="#!">INESData project</a>
+                <a class="navbar-brand" href="#!">INESData incubator</a>
                 <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Main</a></li>
-                        <li class="nav-item"><a class="nav-link " href="project.html">About the project</a></li>
+                        <li class="nav-item"><a class="nav-link " href="project.html">About the incubator</a></li>
                         <li class="nav-item"><a class="nav-link " href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="documents.html">Documents</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
