--- a/content/es/index.html
+++ b/content/es/index.html
@@ -15,11 +15,11 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container px-5">
-                <a class="navbar-brand text-center" href="#!">Proyecto INESData</a>
+                <a class="navbar-brand text-center" href="#!">Incubadora INESData</a>
                 <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Principal</a></li>
-                        <li class="nav-item"><a class="nav-link " href="proyecto.html">Sobre el proyecto</a></li>
+                        <li class="nav-item"><a class="nav-link " href="proyecto.html">Sobre la incubadora</a></li>
                         <li class="nav-item"><a class="nav-link " href="noticias.html">Noticias</a></li>
                         <li class="nav-item"><a class="nav-link" href="documentos.html">Documentos</a></li>
                         <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
