--- a/content/en/contact.html
+++ b/content/en/contact.html
@@ -22,7 +22,8 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="index.html">Principal</a></li>
-                        <li class="nav-item"><a class="nav-link " href="project.html">About the project</a></li>
+                        <!--<li class="nav-item"><a class="nav-link active" aria-current="page" href="project.html">About</a></li>-->
+                        <li class="nav-item"><a class="nav-link" href="repositories.html">Repositores</a></li>
                         <li class="nav-item"><a class="nav-link " href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="documents.html">Documents</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Contact</a></li>
