--- a/content/en/documents.html
+++ b/content/en/documents.html
@@ -20,8 +20,9 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="index.html">Main</a></li>
-                        <li class="nav-item"><a class="nav-link " href="project.html">About the project</a></li>
-                        <li class="nav-item"><a class="nav-link " href="news.html">News</a></li>
+                        <!--<li class="nav-item"><a class="nav-link active" aria-current="page" href="project.html">About</a></li>-->
+                        <li class="nav-item"><a class="nav-link" href="repositories.html">Repositores</a></li>
+                        <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="documents.html">Documents</a></li>
                         <li class="nav-item"><a class="nav-link"  href="contact.html">Contact</a></li>
                         <div class="dropdown">
