--- a/content/es/contacto.html
+++ b/content/es/contacto.html
@@ -22,7 +22,8 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="index.html">Principal</a></li>
-                        <li class="nav-item"><a class="nav-link " href="proyecto.html">Sobre el proyecto</a></li>
+                        <!--<li class="nav-item"><a class="nav-link " href="proyecto.html">Sobre la incubadora</a></li>-->
+                        <li class="nav-item"><a class="nav-link " href="repositorios.html">Repositorios</a></li>
                         <li class="nav-item"><a class="nav-link " href="noticias.html">Noticias</a></li>
                         <li class="nav-item"><a class="nav-link" href="documentos.html">Documentos</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Contacto</a></li>
