--- a/content/es/index.html
+++ b/content/es/index.html
@@ -19,7 +19,8 @@
                 <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Principal</a></li>
-                        <li class="nav-item"><a class="nav-link " href="proyecto.html">Sobre la incubadora</a></li>
+                        <!--<li class="nav-item"><a class="nav-link " href="proyecto.html">Sobre...</a></li>-->
+                        <li class="nav-item"><a class="nav-link " href="repositorios.html">Repositorios</a></li>
                         <li class="nav-item"><a class="nav-link " href="noticias.html">Noticias</a></li>
                         <li class="nav-item"><a class="nav-link" href="documentos.html">Documentos</a></li>
                         <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
