Batch of news added
Including images in assets

--- a/content/es/noticias.html
+++ b/content/es/noticias.html
@@ -52,6 +52,95 @@
                 <div class="row">
                     <div class="col-lg-8">
 
+                        <!-- Post: Post content-->
+                        <article id="post-16">
+                            <!---- Post header ---->
+                            <header class="mb-4">
+                                <!-- Post title-->
+                                <h1 class="fw-bolder mb-1">UNICO I+D Project Meet-up Madrid 2024</h1>
+                                <!-- Post meta content-->
+                                <div class="text-muted fst-italic mb-2">Publicado el 13 de Diciembre de 2024 por INESData</div>
+                                <!-- Post categories-->
+                                <a class="badge bg-secondary text-decoration-none link-light" href="#!">diseminación</a>
+                                <a class="badge bg-secondary text-decoration-none link-light" href="#!">presentación</a>
+                            </header>
+                            <!-- Preview image figure-->
+                            <figure class="mb-4">
+                                <img class="img-fluid rounded" src="../../assets/images/post-16.jpg" alt="..." style="width: 70%; height: auto;" />
+                            </figure>
+                            <!-- Post content-->
+                            <section class="mb-5">
+                                <p class="fs-5 mb-4"><em>Madrid, 12 de diciembre de 2024.</em> INESData participó en el UNICO I+D Project Meet-up Madrid 2024, un evento que reunió a los principales proyectos financiados bajo el programa <a href="https://espanadigital.gob.es/lineas-de-actuacion/unico-id-cloud-0"> UNICO I+D Cloud</a>. La jornada, organizada en la ETSI de Montes, Forestal y del Medio Natural (UPM) por el proyecto ELADAIS, fue una oportunidad para el intercambio de conocimientos y la generación de sinergias en el ámbito de la innovación digital.</p>
+                                <p class="fs-5 mb-4">En la sesión <em>"Action presentations, key use cases and demonstrators"</em>, los representantes de INESData, Óscar Corcho y Cristina Sandoval, presentaron <em>"INESData - Infrastructure to Investigate Data Spaces in Distributed Environments at UPM"</em>. Durante la presentación, se destacaron los logros del proyecto en la creación de una incubadora nacional de espacios de datos basada en infraestructuras federadas cloud-edge, así como su impacto en sectores estratégicos, como la movilidad o la lingüística, en Europa.</p>
+                                <p class="fs-5 mb-4">Actualmente, el programa UNICO I+D cuenta con 16 proyectos, entre ellos <a href="https://eladais.org/"> ELADAIS</a>, <a href="https://www.gsi.upm.es/es/amor"> AMOR</a> y <a href="https://investigacionpolitecnica.com/"> Data&CodeContinuum</a>, que, al igual que INESData, comparten la visión de potenciar la innovación en la nube y son liderados íntegramente desde la Universidad Politécnica de Madrid.</p>
+                                <p class="fs-5 mb-4">El evento reunió a representantes de proyectos financiados por UNICO I+D Cloud, y se contó con los representantes de la Comisión Europea, como Stefan Bogensberger y Rolf Riemenschneider, así como expertos del Instituto Tecnológico de Informática (ITI), entre ellos Daniel Sáez Domingo.</p>
+                            </section>
+                        </article>
+
+                        <!-- Post: Post content-->
+                        <article id="post-15">
+                            <!---- Post header ---->
+                            <header class="mb-4">
+                                <!-- Post title-->
+                                <h1 class="fw-bolder mb-1">INESData en el CLARIN Annual Conference 2024</h1>
+                                <!-- Post meta content-->
+                                <div class="text-muted fst-italic mb-2">Publicado el 18 de Octubre de 2024 por INESData</div>
+                                <!-- Post categories-->
+                                <a class="badge bg-secondary text-decoration-none link-light" href="#!">diseminación</a>
+                                <a class="badge bg-secondary text-decoration-none link-light" href="#!">presentación</a>
+                            </header>
+                            
+                            <!-- Post content-->
+                            <section class="mb-5">
+                                <p class="fs-5 mb-4"><em>Barcelona, 15 de octubre de 2024.</em> INESData se presenta en dos sesiones en la conferencia CLARIN 2024:
+                                    <ul>
+                                        <li>"The Spanish INESData and TeresIA projects as potential contributors to CLARIN", presentada por Elena Montiel, Paula Diez y Patricia Martín Chozas. 
+                                            <!-- Preview image figure-->
+                                            <figure class="mb-4">
+                                                <img class="img-fluid rounded" src="../../assets/images/post-15.jpg" alt="..." style="width: 65%; height: auto;" />
+                                            </figure>
+                                        </li>
+                                        <li>"Evaluating LLMs for factuality in multilingual, low-resourced scenarios", a cargo de José Manuel Gómez-Pérez.
+                                            <!-- Preview image figure-->
+                                            <figure class="mb-4">
+                                                <img class="img-fluid rounded" src="../../assets/images/post-15b.jpg" alt="..." style="width: 65%; height: auto;" />
+                                            </figure>
+                                        </li>
+                                    </ul>
+                                 </p>
+                                <p class="fs-5 mb-4">Este evento reúne a expertos internacionales en procesamiento del lenguaje y espacios de datos lingüísticos.</p>
+                                <p class="fs-5 mb-4">Más información en el siguiente <a href="https://www.clarin.eu/">enlace.</a></p>
+                            </section>
+                        </article>
+
+                        <!-- Post: Post content-->
+                        <article id="post-14">
+                            <!---- Post header ---->
+                            <header class="mb-4">
+                                <!-- Post title-->
+                                <h1 class="fw-bolder mb-1">Gobernanza de espacios de datos: 2ª versión del handbook (E6)</h1>
+                                <!-- Post meta content-->
+                                <div class="text-muted fst-italic mb-2">Publicado el 2 de Julio de 2024 por INESData</div>
+                                <!-- Post categories-->
+                                <a class="badge bg-secondary text-decoration-none link-light" href="#!">entregables</a>
+                                <a class="badge bg-secondary text-decoration-none link-light" href="#!">handbook</a>
+                                <a class="badge bg-secondary text-decoration-none link-light" href="#!">gobernanza</a>
+                            </header>
+                        
+                            <!-- Post content-->
+                            <section class="mb-5">
+                                <p class="fs-5 mb-4">Esta guía práctica, que se actualiza continuamente a medida que avanza el proyecto, se centra en esta edición en la gobernanza de los espacios de datos, un aspecto crucial para su desarrollo y consolidación.</p>
+                                <p class="fs-5 mb-4">La nueva versión del Handbook incorpora tres elementos fundamentales: 
+                                    <ul>
+                                        <li>Guía Práctica sobre Cuestiones de Cumplimiento con la normativa del Espacio de Datos.</li>
+                                        <li>Definición de roles en la gobernanza del Espacio de Datos, estableciendo las responsabilidades y funciones de los distintos actores involucrados.</li>
+                                        <li>Modelos Contractuales Tipo, diseñados para facilitar acuerdos claros y estructurados entre las partes bajo el marco de gobernanza.</li>
+                                    </ul>
+                                 </p>
+                                 <p class="fs-5 mb-4">Además de servir como referencia para la creación y gestión de espacios de datos dentro del proyecto INESData, esta versión recoge aprendizajes y referencias de iniciativas internacionales que fortalecen el marco de gobernanza.</p>
+                                <p class="fs-5 mb-4">Puedes descargarte el documento en el siguiente <a href="../../assets/documents/INESData - E6.Handbook_ES_v2.pdf">enlace.</a></p>
+                            </section>
+                        </article>
 
                         <!-- Post: Post content-->
                         <article id="post-11">
@@ -98,6 +187,33 @@
                                 <p class="fs-5 mb-4">Nos enorgullece anunciar nuestra participación en la Data Week 2024, dentro del marco del Data Spaces Symposium 2024, que se celebró en Darmstadt, Alemania. Durante la sesión "Generative AI: BDVA’s Member’s Experience", tuvimos la oportunidad de compartir nuestras experiencias y avances en la inteligencia artificial generativa junto a otros líderes del sector.</p>
                                 <p class="fs-5 mb-4">Este evento ha supuesto ser un crisol de innovación y colaboración, donde exploraremos cómo la IA generativa está transformando los espacios de datos y potenciando nuevas oportunidades para la industria. </p>
                                 <p class="fs-5 mb-4">¡No podemos esperar a mostrarles cómo INESData está a la vanguardia de esta revolución tecnológica! Para más información, podéis visitar: <a href="https://data-week.eu/session/generative-ai-bdva-members-experience/">Data Week 2024 - Generative AI Session</a></p>
+                            </section>
+                        </article>
+
+                        <!-- Post: Post content-->
+                        <article id="post-13">
+                            <!---- Post header ---->
+                            <header class="mb-4">
+                                <!-- Post title-->
+                                <h1 class="fw-bolder mb-1">INESData organiza dos workshops en el marco de EELISA Connect 2024</h1>
+                                <!-- Post meta content-->
+                                <div class="text-muted fst-italic mb-2">Publicado el 9 de Marzo de 2024 por INESData</div>
+                                <!-- Post categories-->
+                                <a class="badge bg-secondary text-decoration-none link-light" href="#!">presentación</a>
+                                <a class="badge bg-secondary text-decoration-none link-light" href="#!">diseminación</a>
+                            </header>
+                            <!-- Preview image figure-->
+                            <figure class="mb-4"><img class="img-fluid rounded" src="../../assets/images/post-13.jpg" alt="..." style="width: 75%; height: auto;"/></figure>
+                            <!-- Post content-->
+                            <section class="mb-5">
+                                <p class="fs-5 mb-4"><em>Madrid, 4-8 de marzo de 2024.</em> Como parte de EELISA Connect 2024, INESData ha organizado y dirigido dos talleres en los que se abordan los avances en el desarrollo de espacios de datos y tecnologías de inteligencia artificial.</p>
+                                <p class="fs-5 mb-4">Durante el evento, INESData coordinó los siguientes talleres: 
+                                    <ul>
+                                        <li>"Data Spaces for Researchers: Fostering Collaborative Research and Innovation" (4-5 marzo). Coordinada por Esteban González y Carlos Ruiz, esta sesión abordó el papel de los espacios de datos en la investigación colaborativa. Andrés García y Juan Miguel Auñón presentaron estrategias para fomentar la interoperabilidad y el acceso abierto a datos científicos. Más información: <a href="https://eelisa.eu/events/eelisaconnectworkshop-data-spaces-for-researchers-fostering-collaborative-research-and-innovation/">EELISA Connect Workshop Data Spaces</a></li>
+                                        <li>"Teaching and Learning Language Technologies (text and speech) in light of Generative AI" (7-8 marzo). Elena Montiel y Patricia Martín Chozas dirigieron esta sesión centrada en la enseñanza y aprendizaje de tecnologías lingüísticas en la era de la inteligencia artificial generativa. Se discutieron aplicaciones innovadoras en educación, procesamiento del lenguaje natural y modelos de lenguaje multilingües. Más información: <a href="https://eelisa.eu/events/eelisaconnectworkshop-teaching-and-learning-language-technologies-text-and-speech-in-light-of-generative-ai/">EELISA Connect Workshop LLT</a></li>
+                                    </ul>
+                                 </p>
+                                 <p class="fs-5 mb-4">INESData refuerza su compromiso con la investigación abierta, la inteligencia artificial y la interoperabilidad de datos en Europa.</p>
                             </section>
                         </article>
 
@@ -263,10 +379,15 @@
                         <div class="card mb-4">
                             <div class="card-header">Listado de noticias</div>
                             <div class="card-body">
-                                <ul class="list-unstyled mb-0">
+                                <ul>
+                                <!-- <ul class="list-unstyled mb-0"> -->
+                                    <li><a href="#post-16">UNICO I+D Project Meet-up Madrid 2024</a></li>
+                                    <li><a href="#post-15">INESData en el CLARIN Annual Conference 2024</a></li>
+                                    <li><a href="#post-14">Gobernanza de espacios de datos: 2ª versión del handbook (E6)</a></li>
                                     <li><a href="#post-11">Versión 0.2.0 del INESData Conector + Interface</a></li>
                                     <li><a href="#post-10">Participación en la Data Week'24. Part I</a></li>
                                     <!--<li><a href="#post-09">Publicado el entregable E16. Informe de diseminación</a></li>-->
+                                    <li><a href="#post-13">INESData organiza dos workshops en el marco de EELISA Connect 2024</a></li>
                                     <li><a href="#post-12">Nota de prensa en el Portal de la UPM</a></li>
                                     <li><a href="#post-08">Presentación en JURIX'2023 </a></li>
                                     <li><a href="#post-07">Nota de prensa en E.T.S.I. Informáticos</a></li>
