--- a/content/en/news.html
+++ b/content/en/news.html
@@ -57,7 +57,32 @@
                 <div class="row">
                     <div class="col-lg-8">
 
-                         <!-- Post: Post content-->
+                        <!-- Post: Post content-->
+                        <article id="post-17">
+                            <!---- Post header ---->
+                            <header class="mb-4">
+                                <!-- Post title-->
+                                <h1 class="fw-bolder mb-1">1st Gaia-X Spain Data Spaces Summit: Presentation of the INESData Project</h1>
+                                <!-- Post meta content-->
+                                <div class="text-muted fst-italic mb-2">Published on December 5, 2024 by INESData</div>
+                                <!-- Post categories-->
+                                <a class="badge bg-secondary text-decoration-none link-light" href="#!">dissemination</a>
+                                <a class="badge bg-secondary text-decoration-none link-light" href="#!">presentation</a>
+                            </header>
+                            <!-- Preview image figure-->
+                            <figure class="mb-4">
+                                <img class="img-fluid rounded" src="../../assets/images/post-17.jpg" alt="..." style="width: 75%; height: auto;" />
+                            </figure>
+                            <!-- Post content-->
+                            <section class="mb-5">
+                                <p class="fs-5 mb-4"><em>Madrid, December 3-4, 2024.</em> At the First Gaia-X Spain Data Spaces Summit, a key event for the future of technology and the data economy in Spain, INESData participated in the session <em>"Technologies for Data Spaces"</em>.</p>
+                                <p class="fs-5 mb-4">Elena Montiel Ponsoda (OEG-UPM) and Juan Miguel Auñón (GMV) explained how to create a data space using the INESData platform, the technologies developed, and a practical example, <a href="https://mobility.ds.inesdata-project.eu/home"> the mobility data space</a> developed in the project.</p>
+                                <p class="fs-5 mb-4">INESData is presented as a practical and simple tool to facilitate the deployment of a data space.</p>
+                                <p class="fs-5 mb-4">More information at the following <a href="https://www.gaiax-spain.com/">link.</a></p>
+                            </section>
+                        </article>
+
+                        <!-- Post: Post content-->
                          <article id="post-16">
                             <!---- Post header ---->
                             <header class="mb-4">
@@ -228,6 +253,7 @@
                             <header class="mb-4">
                                 <!-- Post title-->
                                 <h1 class="fw-bolder mb-1">Press release on the UPM Portal</h1>
+                                <!-- <h1 class="fw-bolder mb-1">Press release on the UPM Portal</h1> -->
                                 <!-- Post meta content-->
                                 <div class="text-muted fst-italic mb-2">Published on January 22, 2024 by INESData</div>
                                 <!-- Post categories-->
@@ -262,7 +288,7 @@
                                 <section class="mb-5">
                                     <p class="fs-5 mb-4">Our colleagues Gabriela Argüelles Terrón, Patricia Martín Chozasy, and Víctor Rodríguez Doncel have published the article "Event Extraction and Semantic Representation from Spanish Workers' Statute Using Large Language Models" as part of the 36th International Conference on Legal Knowledge and Information Systems (JURIX 2023).</p>
                                     <p class="fs-5 mb-4">This work uses LLMs to process an important piece of Spanish legislation: the Workers' Statute. The proposed method extracts the relevant events in their articles using a GPT-3.5 model and represents the entities involved in the events and the relationships between them as RDF triplets. The experiments carried out to select a strategy include zero- and few-shot learning. Finally, this work proposes a strategy to elevate the extracted legal relationships to a legal knowledge graph. </p>
-                                    <p class="fs-5 mb-4">You can find the article as part of the IOS Press Ebooks <a href="https://ebooks.iospress.nl/doi/10.3233/FAIA230983">here</ a>
+                                    <p class="fs-5 mb-4">You can find the article as part of the IOS Press Ebooks <a href="https://ebooks.iospress.nl/doi/10.3233/FAIA230983">here</a>
                                     </p>
                         </article>
 
@@ -284,7 +310,7 @@
                                 <section class="mb-5">
                                     <p class="fs-5 mb-4">The portal of the Higher Technical School of Computer Engineers has published a press release echoing the development, implications and potential of the INESData incubator. </p>
                                     <p class="fs-5 mb-4">The press release highlights that "The INESData project (Infrastructure for the Research of Data Spaces distributed at UPM) is an initiative led by the Polytechnic University of Madrid (UPM) to through its research groups Ontology Engineering Group (OEG) and the Information Processing and Telecommunications Center (IPTC). Its main mission is to create an incubator of data spaces in Spain, with the aim of promoting research, development and. innovation in areas related to Data Space technology and promoting public-private collaboration." </p>
-                                    <p class="fs-5 mb-4">You can find the entry on its portal <a href="https://www.fi.upm.es/?id=tablon&acciongt=consulta1&idet=4993">here</ a>
+                                    <p class="fs-5 mb-4">You can find the entry on its portal <a href="https://www.fi.upm.es/?id=tablon&acciongt=consulta1&idet=4993">here</a>
                                     </p>
                                 </section>
                         </article>
@@ -302,7 +328,7 @@
                                 <a class="badge bg-secondary text-decoration-none link-light" href="#!">presentation</a>
                             </header>
                             <!-- Preview image figure-->
-                            <figure class="mb-4"><img class="img-fluid rounded" src="../../assets/images/post-05.png" alt="..." /></ figure>
+                            <figure class="mb-4"><img class="img-fluid rounded" src="../../assets/images/post-05.png" alt="..." /></figure>
                                 <!-- Post content-->
                                 <section class="mb-5">
                                     <p class="fs-5 mb-4">Our colleague Paula Díez was at the National Library presenting the INESData project in the context of the session <a href="https://www.bne.es/es/agenda /bibliotecas-datos-inteligencia-artificial-nuevas-rutas-knowledge">Libraries, data, artificial intelligence: the new routes of knowledge</a> of the <a href="https://www.bne.es/es /agenda/dariah-day-days-on-digital-humanities-clariah-es">DARIAH Day'2023 Humanities Days.</a></p>
@@ -325,7 +351,7 @@
                                 <a class="badge bg-secondary text-decoration-none link-light" href="#!">dissemination</a>
                             </header>
                             <!-- Preview image figure-->
-                            <figure class="mb-4"><img class="img-fluid rounded" src="../../assets/images/post-04.png" alt="..." /></ figure>
+                            <figure class="mb-4"><img class="img-fluid rounded" src="../../assets/images/post-04.png" alt="..." /></figure>
                                 <!-- Post content-->
                                 <section class="mb-5">
                                     <p class="fs-5 mb-4">This past October 26, the project, challenges and objectives were presented at the <a href="https://european-big-data-value-forum.eu/">>European Big Data Value Forum (EBDVF)</a> during the session "Data Spaces Roadmap and Future Programme". This is an incredible opportunity to share our vision and progress in creating interoperable and secure data spaces in Spain and its impact in Europe.
@@ -391,6 +417,8 @@
                             <div class="card-body">
                                 <ul>
                                 <!-- <ul class="list-unstyled mb-0"> -->
+                                    
+                                    <li><a href="#post-17">1st Gaia-X Spain Data Spaces Summit: Presentation of the INESData Project</a></li>
                                     <li><a href="#post-16">UNICO I+D Project Meet-up Madrid 2024</a></li>
                                     <li><a href="#post-15">INESData at the CLARIN Annual Conference 2024</a></li>
                                     <li><a href="#post-14">Governance of Data Spaces: 2nd version of the handbook (E6)</a></li>
