--- a/content/es/noticias.html
+++ b/content/es/noticias.html
@@ -52,6 +52,32 @@
                 <div class="row">
                     <div class="col-lg-8">
 
+                         <!-- Post: Post content-->
+                         <article id="post-17">
+                            <!---- Post header ---->
+                            <header class="mb-4">
+                                <!-- Post title-->
+                                <h1 class="fw-bolder mb-1">1ª Cumbre de Espacios de Datos Gaia-X España: Presentación del Proyecto INESData</h1>
+                                <!-- Post meta content-->
+                                <div class="text-muted fst-italic mb-2">Publicado el 5 de Diciembre de 2024 por INESData</div>
+                                <!-- Post categories-->
+                                <a class="badge bg-secondary text-decoration-none link-light" href="#!">diseminación</a>
+                                <a class="badge bg-secondary text-decoration-none link-light" href="#!">presentación</a>
+                            </header>
+                            <!-- Preview image figure-->
+                            <figure class="mb-4">
+                                <img class="img-fluid rounded" src="../../assets/images/post-17.jpg" alt="..." style="width: 75%; height: auto;" />
+                            </figure>
+                            <!-- Post content-->
+                            <section class="mb-5">
+                                <p class="fs-5 mb-4"><em>Madrid, 3-4 de diciembre de 2024.</em> En la Primera Cumbre de Espacios de Datos Gaia-X España, evento destacado para el futuro de la tecnología y la economía del dato en España, INESData participa en la sesión <em>"Tecnologías para espacios de datos"</em>.</p>
+                                <p class="fs-5 mb-4">Elena Montiel Ponsoda (OEG-UPM) y Juan Miguel Auñón (GMV), explican cómo crear un espacio de datos mediante la plataforma INESData, las tecnologías desarrolladas y un ejemplo práctico,  <a href="https://mobility.ds.inesdata-project.eu/home"> el espacio de datos de movilidad</a> desarrollado en el proyecto.</p>
+                                <p class="fs-5 mb-4">INESData se presenta como una herramienta práctica y sencilla para facilitar el despliegue de un espacio de datos.</p>
+                                <p class="fs-5 mb-4">Más información en el siguiente <a href="https://www.gaiax-spain.com/">enlace.</a></p>
+                            </section>
+                        </article>
+
+
                         <!-- Post: Post content-->
                         <article id="post-16">
                             <!---- Post header ---->
@@ -381,6 +407,7 @@
                             <div class="card-body">
                                 <ul>
                                 <!-- <ul class="list-unstyled mb-0"> -->
+                                    <li><a href="#post-17">1ª Cumbre de Espacios de Datos Gaia-X España: Presentación del Proyecto INESData</a></li>
                                     <li><a href="#post-16">UNICO I+D Project Meet-up Madrid 2024</a></li>
                                     <li><a href="#post-15">INESData en el CLARIN Annual Conference 2024</a></li>
                                     <li><a href="#post-14">Gobernanza de espacios de datos: 2ª versión del handbook (E6)</a></li>
