--- a/content/en/news.html
+++ b/content/en/news.html
@@ -168,7 +168,7 @@
                                     </ul>
                                  </p>
                                  <p class="fs-5 mb-4">In addition to serving as a reference for the creation and management of data spaces within the INESData project, this version includes lessons learned and references from international initiatives that strengthen the governance framework.</p>
-                                <p class="fs-5 mb-4">You can download the document at the following <a href="../../assets/documents/INESData - E6.Handbook_ES_v2.pdf">link.</a> (Spanish version)</p>
+                                <p class="fs-5 mb-4">You can download the document at the following <a href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Deliverables/INESData%20-%20E6.Handbook_ES_v2.pdf">link.</a> (Spanish version)</p>
                             </section>
                         </article>
 
