--- a/content/es/noticias.html
+++ b/content/es/noticias.html
@@ -164,7 +164,7 @@
                                     </ul>
                                  </p>
                                  <p class="fs-5 mb-4">Además de servir como referencia para la creación y gestión de espacios de datos dentro del proyecto INESData, esta versión recoge aprendizajes y referencias de iniciativas internacionales que fortalecen el marco de gobernanza.</p>
-                                <p class="fs-5 mb-4">Puedes descargarte el documento en el siguiente <a href="../../assets/documents/INESData - E6.Handbook_ES_v2.pdf">enlace.</a></p>
+                                <p class="fs-5 mb-4">Puedes descargarte el documento en el siguiente <a href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Deliverables/INESData%20-%20E6.Handbook_ES_v2.pdf">enlace.</a></p>
                             </section>
                         </article>
 
